@@ -8,9 +8,11 @@
 
 <b>Tapestry</b> is a comprehensive web application framework, written in Java.
 
-<p>Tapestry is not an application server.  It is designed to be used inside an application server.
+<p>Tapestry is not an application server.  
+It is designed to be used inside an application server.
 
-<p>Tapestry is not an application.  Tapestry is a framework for creating web applications.
+<p>Tapestry is not an application.  
+Tapestry is a framework for creating web applications.
 
 <p>Tapestry is not a way of using JavaServer Pages.
 Tapestry is an <i>alternative to</i> using JavaServer Pages.
@@ -19,7 +21,7 @@ Tapestry is an <i>alternative to</i> using JavaServer Pages.
 Tapestry uses a component object model, not simple scripting, 
 to create highly dynamic, interactive web pages.
 
-<p>Tapestry is based on the Java Servlet API version 2.1.
+<p>Tapestry is based on the Java Servlet API version 2.2.
 
 <p>Tapestry uses a sophisticated component model to divide a web application into 
 a hierarchy of {@link com.primix.tapestry.IComponent components}.  
@@ -36,14 +38,13 @@ This allows developers to concentrate on the business and presentation aspects o
 <p>Tapestry is distibuted under the <a
 href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General
 Public License (LGPL)</a>.  This allows it to be distributed within
-both open and non-open source applications, as long as the source code
-is distributed with it.
+both open and non-open source applications.
 
 <p>Visit Tapestry's home page at
-<a href="http://tapestry.sourceforge.net">http://tapestry.sourceforge.net</a>
+<a href="http://sourceforge.net/projects/tapestry">http://sourceforge.net/projects/tapestry</a>
 for more details on licensing.
 
-@author Howard Ship <a href="mailto:hship@primix.com">hship@primix.com</a>
+@author Howard Ship <a href="mailto:hship@sourceforge.net">hship@sourceforge.net</a>
 
 </body>
 </html>
