@@ -2,6 +2,6 @@
 
 JAVA_FILES = *.java
 
-RESOURCE_FILES = *.dtd
+RESOURCE_FILES = *.dtd *.jwc
 
 include $(SYS_MAKEFILE_DIR)/Package.mk
